--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -147,6 +147,7 @@
                     android:text="@string/tv_dlty"
                     android:textSize="12sp"/>
                 <TextView
+                    android:id="@+id/id_btn_xy"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_dlxy"
