--- a/app/src/main/res/layout/activity_tx.xml
+++ b/app/src/main/res/layout/activity_tx.xml
@@ -159,7 +159,8 @@
                 android:layout_marginTop="12.5dp"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:gravity="bottom">
+                android:gravity="bottom"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_alignParentBottom="true"
@@ -197,6 +198,105 @@
                     android:textColor="@color/bg_r_3"
                     android:textSize="18sp" />
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_marginTop="12.5dp"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:gravity="bottom">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/id_btn_tx_1"
+                        android:layout_width="93dp"
+                        android:layout_height="47dp"
+                        android:gravity="center"
+                        android:background="@drawable/btn_tx"
+                        android:baselineAligned="true">
+                        <TextView
+                            android:id="@+id/id_txt_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tv_rmb_t"
+                            android:textSize="11sp"
+                            android:textColor="@color/black"
+                            android:paddingTop="4dp"/>
+                        <TextView
+                            android:id="@+id/id_txv_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0.1"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:id="@+id/id_btn_tx_2"
+                        android:layout_width="93dp"
+                        android:layout_height="47dp"
+                        android:gravity="center"
+                        android:background="@drawable/btn_tx"
+                        android:baselineAligned="true">
+                        <TextView
+                            android:id="@+id/id_txt_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tv_rmb_t"
+                            android:textSize="11sp"
+                            android:textColor="@color/black"
+                            android:paddingTop="4dp"/>
+                        <TextView
+                            android:id="@+id/id_txv_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0.1"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:id="@+id/id_btn_tx_3"
+                        android:layout_width="93dp"
+                        android:layout_height="47dp"
+                        android:gravity="center"
+                        android:background="@drawable/btn_tx"
+                        android:baselineAligned="true">
+                        <TextView
+                            android:id="@+id/id_txt_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tv_rmb_t"
+                            android:textSize="11sp"
+                            android:textColor="@color/black"
+                            android:paddingTop="4dp"/>
+                        <TextView
+                            android:id="@+id/id_txv_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0.1"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
 
             <View
                 android:layout_marginTop="14.5dp"
