--- a/app/src/main/res/layout/fragment_ghsc.xml
+++ b/app/src/main/res/layout/fragment_ghsc.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GhscFragment">
+    tools:context=".GhscFragment"
+    android:id="@+id/id_ghsc_main">
 
     <com.youzan.androidsdkx5.YouzanBrowser
         android:id="@+id/id_webview"
