--- a/app/src/main/res/layout/fragment_grzx.xml
+++ b/app/src/main/res/layout/fragment_grzx.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GrzxFragment"
-    android:paddingBottom="60dp">
+    tools:context=".GrzxFragment">
 
 
     <com.youzan.androidsdkx5.YouzanBrowser
